look sgood bug buggy, when it comes to array out of bounds

--- a/Project/react-client/src/styles/GameBoard.css
+++ b/Project/react-client/src/styles/GameBoard.css
@@ -72,6 +72,8 @@
 
 .indicatorImage {
     width: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 h3 {
